# Humanoid-Teleop

./: .gitignore  README.md  conda_env.yaml  environment.yaml  flake.nix  requirements.txt
Livox-SDK2/: CMakeLists.txt
Livox-SDK2/samples/: CMakeLists.txt
Livox-SDK2/samples/point_cloud_recorder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
assets/g1/: g1_body29_hand14_virtual.urdf
teleop/: MUJOCO_LOG.TXT  TeleVision.py  WHOLE_BODY_README.md  constants.py  constants_vuer.py  debug_mujoco_amo.py  debug_mujoco_control.py  depthpointcloud.py  g1_wrist.xml  groot_inference_locomotion.py  groot_inference_wholebody.py  helpers.py  hfm-action_inference_rtc.py  hfm-action_inference_wholebody.py  ik_test_results.npy  internvla_fast_inference.py  internvla_inference_wholebody.py  lidar.py  main.py  manager.py  manus_left_target_points_with_idx_20251212_162116.npy  manus_left_target_points_with_idx_20251212_162119.npy  manus_left_target_points_with_idx_20251212_162122.npy  master.py  master_whole_body.py  merger.py  mid360_config.json  motion_utils.py  mujoco_amo.py  mujoco_amo_wrist.py  multi_target_ik.py  multi_target_ik_simplified.py  odometry.py  openpi_inference_wholebody.py  openvla_inference.py  openvla_inference_wholebody.py  openxr_left_target_points_with_idx_20251212_151126.npy  openxr_left_target_points_with_idx_20251212_151135.npy  progress.py  replay.py  (+11 more)
teleop/image_server/: image_client.py  image_server.py  realsense_server.py
teleop/robot_control/: compute_tau.py  hand_retargeting.py  remote_controller.py  robot_arm.py  (+7 more)
(+23 files in other folders)
